Bug 1664114 - Try to find a more usable selection for copy-paste if copying from an HTMLEditor. r=masayuki

See the bug for the complications that made me write this slightly hacky
fix... Other solutions definitely welcome.

Add a test, adjusted so it would fail without the change.

Differential Revision: https://phabricator.services.mozilla.com/D89835